// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`dot-artist match example snapshot 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "attrs": {
          "fill": "white",
          "stroke": "transparent",
        },
        "class": "dot__frame-bg",
        "type": "rect",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "fill": "white",
              "stroke": "#3b4044",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "#3b4044",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontWeight": "normal",
              "text": "Sub",
              "textAlign": "center",
              "textBaseline": "hanging",
            },
            "type": "text",
          },
          {
            "attrs": {
              "fill": "orange",
              "lineDash": null,
              "lineWidth": 1,
              "radius": 2,
              "stroke": "#111",
            },
            "type": "rect",
          },
          {
            "attrs": {
              "fill": "purple",
              "fontFamily": "Source Code Pro, sans-serif",
              "fontSize": 14,
              "fontWeight": "normal",
              "text": "a1",
              "textAlign": "center",
              "textBaseline": "middle",
            },
            "type": "text",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "white",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "blue",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "blue",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {},
        "mark": {
          "attrs": {},
          "children": [
            {
              "attrs": {
                "fill": "orange",
                "lineDash": null,
                "lineWidth": 1,
                "radius": 2,
                "stroke": "#111",
              },
              "type": "path",
            },
          ],
          "type": "group",
        },
        "type": "symbol",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "end",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      {
        "attrs": {
          "fill": "orange",
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#111",
        },
        "type": "rect",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "b1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      {
        "attrs": {
          "fill": "orange",
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#111",
        },
        "type": "rect",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "c1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "Dot Diagram Example",
          "textAlign": "center",
          "textBaseline": "hanging",
        },
        "type": "text",
      },
    ],
    "type": "group",
  },
}
`;

exports[`dot-artist renders different arrow type 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "attrs": {
          "fill": "lightyellow",
          "stroke": "transparent",
        },
        "class": "dot__frame-bg",
        "type": "rect",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "fill": "lightyellow",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {},
        "children": [
          {
            "attrs": {
              "lineDash": null,
              "lineWidth": 1,
              "stroke": "#3b4044",
            },
            "type": "path",
          },
          {
            "attrs": {
              "lineCap": "round",
              "stroke": "#3b4044",
            },
            "type": "path",
          },
        ],
        "type": "group",
      },
      {
        "attrs": {
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "a1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      {
        "attrs": {
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "b1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      {
        "attrs": {
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "n1",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      {
        "attrs": {
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "end",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      {
        "attrs": {
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "#3b4044",
        },
        "type": "rect",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "a2",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "normal",
          "text": "Graph Label",
          "textAlign": "center",
          "textBaseline": "hanging",
        },
        "type": "text",
      },
    ],
    "type": "group",
  },
}
`;

exports[`dot-artist renders different node type 1`] = `
{
  "mark": {
    "attrs": {},
    "children": [
      {
        "attrs": {},
        "mark": {
          "attrs": {},
          "children": [
            {
              "attrs": {
                "lineDash": null,
                "lineWidth": 1,
                "radius": 2,
                "stroke": "#3b4044",
              },
              "type": "ellipse",
            },
          ],
          "type": "group",
        },
        "type": "symbol",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "ellipse",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      {
        "attrs": {},
        "mark": {
          "attrs": {},
          "children": [
            {
              "attrs": {
                "lineDash": null,
                "lineWidth": 1,
                "radius": 2,
                "stroke": "#3b4044",
              },
              "type": "circle",
            },
          ],
          "type": "group",
        },
        "type": "symbol",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "circle",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      {
        "attrs": {},
        "mark": {
          "attrs": {},
          "children": [
            {
              "attrs": {
                "lineDash": null,
                "lineWidth": 1,
                "radius": 2,
                "stroke": "#3b4044",
              },
              "type": "path",
            },
          ],
          "type": "group",
        },
        "type": "symbol",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "diamond",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
      {
        "attrs": {
          "fill": "transparent",
          "lineDash": null,
          "lineWidth": 1,
          "radius": 2,
          "stroke": "transparent",
        },
        "type": "rect",
      },
      {
        "attrs": {
          "fill": "#3b4044",
          "fontFamily": "Source Code Pro, sans-serif",
          "fontSize": 14,
          "fontWeight": "bold",
          "text": "plaintext",
          "textAlign": "center",
          "textBaseline": "middle",
        },
        "type": "text",
      },
    ],
    "type": "group",
  },
}
`;
